# psiz

./: .coverage  .coveragerc  .gitignore  CHANGES.txt  CODE.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  delete.txt  mark_2019-11-22_11:43:07.526762.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: build_test_publish.yml  non_release.yml  test.yml
benchmarks/: distance.py  embed.py  posterior_sample.py  sampling_wo_replacement.py
docs/: conf.py  datasets.rst  design_philosophy.rst  hosted.rst  index.rst  intro.rst  minimal_example.py  models.rst  pretrained.rst  quick_start.rst  requirements.txt  trials_and_obs.rst  your_data.rst
docs/src/: bibliography.rst  refs.bib
examples/: README.md  active_selection.py  finetuning.py  hosted_datasets.py  information_gain.py  information_gain_config.py  local_tuning.py  one_group_convergence.py  one_group_dimensionality.py  one_group_posterior.py  one_group_posterior_samples_new_1.p  one_group_posterior_samples_new_10.p  one_group_posterior_samples_new_100.p  one_group_posterior_samples_new_1000.p  one_group_posterior_samples_new_10000.p  one_group_posterior_samples_orig_100.p  one_group_posterior_samples_orig_1000.p  one_group_posterior_samples_orig_10000.p  posterior_evolution.py  posterior_samples.py  priority_correlation.py  rank_8c2.py  selection_heuristic_for_query.py  selection_heuristic_for_reference.py  selection_hueristic.py  selection_hueristic_combined.py  three_groups.py  two_configurations.py  vi.py
examples/categorize/: kruschke_1992.py
examples/rank/: mle_1g.py  mle_1g_alt.py  mle_3g.py  mle_3g_alt.py  mle_one_group.py  mle_one_group_convergence.py  mle_one_group_dimensionality.py  mle_three_groups.py  mle_two_configurations.py  one_group_convergence.py  one_group_dimensionality.py  posterior_evolution.py  rank_8c2.py  three_groups.py  two_configurations.py  understanding_information_gain.py  vi.py  vi_1g.py  vi_1g_nonneg.py  vi_3g.py  vi_3g_alt.py  vi_3g_nonneg.py  vi_3ge.py  vi_birds_16.py  vi_one_group.py  vi_one_group_convergence.py  vi_three_groups.py  vi_three_groups_convergence.py
examples/rate/: DMTS_8odors_5acids_allMice_raw_PerceptualData_forRick_122319.pkl  Untitled.ipynb  all_tf.data-00000-of-00001  all_tf.index  checkpoint  data_test.py  kinds_of_models.p  mle_1g-test.py  mle_1g.py  mle_1g_test.py  only_beta_true_tf.data-00000-of-00001  only_beta_true_tf.index  plots-Copy1.ipynb  plots.ipynb  rho_beta_true_tf.data-00000-of-00001  rho_beta_true_tf.index  test.ipynb  testing_load&save_keras.ipynb  testingstuff.ipynb  weights_all_trainable.data-00000-of-00001  weights_all_trainable.index  weights_beta_trainable.data-00000-of-00001  weights_beta_trainable.index  weights_rho__beta_trainable.data-00000-of-00001  weights_rho__beta_trainable.index  weights_rho_is_one.data-00000-of-00001  weights_rho_is_one.index  weights_rho_is_onetenth.data-00000-of-00001  weights_rho_is_onetenth.index
psiz/: __init__.py  benchmark.py  callback_scrap.py  callbacks.py  catalog.py  cv.py  datasets.py  dimensionality.py  generator.py  layers.py  models.py  ops.py  preprocess.py  restart.py  scap.py  scrap.py  scrap_2.py  simulate.py  temp.py  temp_test.py  trials.py  utils.py  visualize.py
psiz/.ipynb_checkpoints/: __init__-checkpoint.py
psiz/agents/: __init__.py  base.py  rank_agent.py
psiz/catalog/: __init__.py  catalog.py
psiz/datasets/: __init__.py
psiz/distributions/: __init__.py  inv_softplus_normal.py  truncated_normal.py
psiz/generator/: __init__.py
psiz/generators/: __init__.py
psiz/keras/: __init__.py  callbacks.py  constraints.py  initializers.py  layers.py  losses.py  metrics.py  regularizers.py  restarter.py  sparse_dispatcher.py
psiz/models/: __init__.py  base.py  proxy.py  rank.py  rate.py  sort.py
psiz/mplot/: __init__.py  bvn_ellipse.py
psiz/trials/: __init__.py  core.py  stack.py  trial_component.py  trial_dataset.py
psiz/utils/: __init__.py  affine_mvn.py  choice_wo_replace.py  expand_dim_repeat.py  fit_tracker.py  generate_group_matrix.py  matrix_comparison.py  pad_2d_array.py  pairwise_index_dataset.py  progress_bar_re.py  stratified_group_kfold.py  utils.py
psychembed/: dimensionality.py  models.py  simulate.py  utils.py  visualize.py
src/psiz/: __init__.py
src/psiz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  temp.py  temp_delete.py  test_catalog.py  test_datasets.py  test_examples.py  test_generator.py  test_generators.py  test_models.py  test_rnn_add_loss.py  test_simulate.py  test_trials.py  test_utils.py
tests/agents/: test_rank_agent.py
tests/data/: conftest.py  test_trial_dataset.py
tests/examples/: test_bb_mle_1g.py  test_mle_1g.py  test_rank_mle_1g.py  test_rank_mle_1g_old.py  (+2 more)
tmp_emb/: config.h5  saved_model.pb  weights.data-00000-of-00001  weights.index
(+596 files in other folders)
