[metadata]
name = psiz
description = Toolbox for inferring psychological embeddings.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = psychology, cognitive science
url = https://github.com/roads/psiz
author = Brett D. Roads
author_email = brett.roads@gmail.com
license = Apache Licence 2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://psiz.readthedocs.io/en/latest/
    Source = https://github.com/roads/psiz
    Tracker = https://github.com/roads/psiz/issues

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    tensorflow >= 2.4.2, < 2.6
    tensorflow-probability == 0.11.0
    pandas
    scikit-learn
    matplotlib
    pillow
    imageio
    importlib-metadata
python_requires = >=3.7, <3.10
setup_requires = 
    setuptools_scm

[options.packages.find]
where = src

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.4