[metadata]
name = psiz
description = Toolbox for inferring psychological embeddings.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = psychology, cognitive science
url = https://github.com/psiz-org/psiz
author = Brett D. Roads
author_email = brett.roads@gmail.com
license = Apache Licence 2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://psiz.readthedocs.io/en/latest/
    Source = https://github.com/psiz-org/psiz
    Tracker = https://github.com/psiz-org/psiz/issues

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    tensorflow >= 2.10, < 2.11
    tensorflow-probability == 0.18.0
    h5py >= 3.0
    pandas
    scikit-learn
    matplotlib
    pillow
    imageio
python_requires = >=3.9, <3.11
setup_requires = 
    setuptools_scm

[options.packages.find]
where = src

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.4
    pytest-cov
    flake8
    pylint
doc =
    sphinx-rtd-theme == 1.0.0
    sphinx-last-updated-by-git
    myst-nb
    sphinxcontrib-bibtex
